crates/jni/tests/ui/bind_java_type/fail/missing_comma_between_properties.stderr
error: expected `,`
 --> tests/ui/bind_java_type/fail/missing_comma_between_properties.rs:8:5
  |
8 |     api = TestAPI
  |     ^^^
